--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/face.png">
+        <img class="portrait" src="/img/bug.jpg">
+        <p>{{about}}</p>
     </div>
 
     {{>footer}}
